# pl-draft-game

./: .gitignore  CLAUDE.md  meta.json  pyproject.toml  render.yaml  requirements.txt
artifacts/: ep_model.joblib  players.parquet  resolver_overrides.csv  wc_players.parquet  wc_resolver_overrides.csv  xga_model.joblib  xgf_model.joblib
data/: apply_linkages.py  build.py  fetch_transfermarkt.py  fetch_understat.py  fetch_worldcup.py  resolve.py
game/: cli.py  state.py  wc_state.py
model/: features.py  score.py  score_wc.py  train.py
web/: app.py
web/templates/: base.html  error.html  faq.html  game.html  index.html  reveal.html  wc_game.html  wc_reveal.html
web/templates/partials/: formation.html  round.html  wc_formation.html  wc_round.html
