[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "38-0"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "soccerdata>=1.8.8,<1.9",
    "pandas>=2.2",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "streamlit>=1.35",
    "numpy>=1.26",
    "scipy>=1.13",
    "requests>=2.31",
    "rapidfuzz>=3.9",
    "unidecode>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "game*"]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter"]
